# JustAnotherInterviewTask

./: .gitignore  .travis.yml  .travis_build.py  CMakeLists.txt  LICENSE  Readme.md  conanfile.py
src/: core.cpp  core.hpp  image_provider.cpp  image_provider.hpp  main.cpp  tests.cpp  ui.cpp  ui.hpp
src/tests/: tests.cpp
src/tests/testfiles/: _out1_.txt  qt.conf
